# fastapi-template

./: .gitignore  Makefile  README.md  docker-compose.yml  rename.sh  sample.code-workspace
api/: Dockerfile  pyproject.toml
api/src/sample/: app.py  config.py
api/src/sample/services/: opensearch.py
api/tests/: test_sample.py
opensearch/: Dockerfile
postgis/: Dockerfile
